--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "architect": "^0.1.13",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "mysql2": "^2.1.0",
     "node-cron": "^2.0.3",
