--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
+    "mongoose": "^5.12.5",
     "mysql2": "^2.1.0",
     "node-cron": "^2.0.3",
     "sequelize": "^6.3.4"
