added mailer for zone calibration updates

--- a/modules/crons/package.json
+++ b/modules/crons/package.json
@@ -5,7 +5,7 @@
     "private": true,
 
     "plugin": {
-        "consumes": ["hereMap", "googleMap", "models", "mainModels", "mongoModels"],
+        "consumes": ["hereMap", "googleMap", "models", "mainModels", "mongoModels", "mailer"],
         "provides": []
     }
 }
