--- a/modules/helpers/package.json
+++ b/modules/helpers/package.json
@@ -8,6 +8,6 @@
         "consumes": [
             "models"
         ],
-        "provides": ["hereMap", "googleMap"]
+        "provides": ["hereMap", "googleMap", "mailer", "config"]
     }
 }
